# asr-experiments

./: .gitignore  README.md  pyproject.toml
data/: read_data.py
docs/: audio-natural-only-cudagraph-benchmark.md  audio-prefix-cudagraph.md  batched-kernel-optimization-round4.md  benchmarking-guide.md  flashattention-forward-combine.md  fp8-calibration.md  nsys-fp8-dynamic-vs-static.md  nsys-fp8-optimization-guide.md  qk-mrope-kv-cache-fusion.md  qwen3-asr-audio-length-and-graph-fast-path.md  vllm-static-fp8-extension.md
eval/: compute_error_rates.py
ideas/: audio_cpu_maxseqlen.md  audio_cpu_metadata_pack.md  audio_suffix_cudagraph.md  batched_kernel_optimization_round_3.md  mps_multi_replica_followup.md  qk_kvcache_exact_rms_reduction.md  qk_kvcache_prefill_head_grouping.md  qk_norm_mrope_kvcache_triton_fusion.md  qk_norm_mrope_triton_fusion.md
inference/: analyse_results.py  audio_utils.py  record_fp8_static_scales.py  run_benchmark.py  run_infer.py  run_infer_batched.py  run_load_test.py  run_nsys_profile.sh  run_record_fp8_static_scales.sh  run_vllm.sh  run_vllm_fp8_dynamic.sh  run_vllm_fp8_static.sh  run_vllm_fp8_static_qk_prefill.sh  run_vllm_fp8_static_qk_prefill_audio_cpu_maxseqlen.sh  run_vllm_fp8_static_qk_prefill_audio_cpu_metadata_pack.sh  run_vllm_fp8_static_qk_prefill_audio_prefix_cudagraph.sh  run_vllm_fp8_static_qk_prefill_audio_prefix_suffix_cudagraph.sh  run_vllm_fp8_static_qk_prefill_audio_suffix_cudagraph.sh  run_vllm_qwen.sh  server_utils.py  start_vllm_server_with_nsys.sh
tests/: test_analyse_results.py  test_audio_cpu_maxseqlen_patch.py  (+4 more)
(+4206 files in other folders)
