[project]
name = "asr-experiments"
version = "0.1.0"
description = "ASR experiments with Qwen ASR and vLLM."
requires-python = ">=3.10,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flash-attn-3",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
    "vllm[audio] @ https://github.com/vllm-project/vllm/releases/download/v0.24.0/vllm-0.24.0%2Bcu129-cp38-abi3-manylinux_2_28_x86_64.whl",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
index-strategy = "unsafe-best-match"
prerelease = "allow"

[[tool.uv.index]]
name = "vllm-cu129"
url = "https://wheels.vllm.ai/0.24.0/cu129"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
flash-attn-3 = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.8.2/flash_attn_3-3.0.0+cu128torch2.9gite2743ab-cp39-abi3-linux_x86_64.whl" }
